fixed scrollbar!!!

--- a/src/style/pages.css
+++ b/src/style/pages.css
@@ -235,6 +235,17 @@ a {
     margin: 5px;
 }
 
+#aboutMePG, #terminalPG, #musicPG, #gamesPG, #contactsPG, #projectsPG, #notesPG, #penisPG ::-webkit-scrollbar {
+    -webkit-scrollbar-width: none;
+    -ms-scrollbar-width: none;
+    -moz-scrollbar-width: none;
+    scrollbar-width: none;
+}
+
+#aboutMePG, #terminalPG, #musicPG, #gamesPG, #contactsPG, #projectsPG, #notesPG, #penisPG ::-moz-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0);
+}
+
 #gamesPG {
     -webkit-backdrop-filter: blur(2px);
     backdrop-filter: blur(2px);
